2011-03-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.

        Ensure that all compilation takes place within a dynamic global object scope
        https://bugs.webkit.org/show_bug.cgi?id=57054

        * bindings/js/JSErrorHandler.cpp:
        (WebCore::JSErrorHandler::handleEvent):
        * bindings/js/JSEventListener.cpp:
        (WebCore::JSEventListener::handleEvent): Updated for signature change.

2011-03-24  John Bauman  <jbauman@chromium.org>

        Reviewed by Kenneth Russell.

        preserveDrawingBuffer=true is ignored
        https://bugs.webkit.org/show_bug.cgi?id=56987

        Add code to the V8 and JSC bindings to support grabbing the value of
        preserveDrawingBuffer from the input context attributes. Also, in
        WebGLRenderingContext use the WebGLContextAttributes that were input
        directly, not those from the GraphicsContext3D which could have been
        changed.

        No new tests, as this can't be tested with DRT. However, this works
        when tested manually.

        * bindings/js/JSHTMLCanvasElementCustom.cpp:
        (WebCore::JSHTMLCanvasElement::getContext):
        * bindings/v8/custom/V8HTMLCanvasElementCustom.cpp:
        (WebCore::V8HTMLCanvasElement::getContextCallback):
        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::clearIfComposited):
        (WebCore::WebGLRenderingContext::paintRenderingResultsToCanvas):

2011-03-24  Enrica Casucci  <enrica@apple.com>

        Reviewed by Alexey Proskuryakov.

        WebKit2:Services menu item to convert selected Simplified/Traditional Chinese Text is not working.
        https://bugs.webkit.org/show_bug.cgi?id=56975
        <rdar://problem/8915066>
        
        Adding support in WebCore to implement readSelectionFromPasteboard
        to support Mac OS X services from WebKit2.

        * WebCore.exp.in:
        * editing/Editor.h:
        * editing/mac/EditorMac.mm: